addaptive menu adjustment

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           <a href="./index.html" class="logo link"
             ><span class="logo1">Web</span>Studio</a
           >
+          <svg class="header__menu" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu_40px"></use>
+          </svg>
           <ul class="list">
             <li>
               <a href="./" class="link highlight">Agencja</a>
@@ -38,7 +41,7 @@
           </ul>
         </nav>
         <div>
-          <ul class="list">
+          <ul class="list block">
             <li>
               <a href="mailto:info@devstudio.com" class="link"
                 ><svg class="link__icon" width="16" height="12">
@@ -55,7 +58,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="main-section">
         <div class="container">
           <h1 class="main-section__header">
@@ -470,6 +473,6 @@
         </div>
       </div>
     </footer>
-    <script src="./JS/modal.js"></script>
+    <script src="./JS/modal.js"></script> -->
   </body>
 </html>
