applying styles for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
     </header>
-    <!-- <main>
+    <main>
       <section class="main-section">
         <div class="container">
           <h1 class="main-section__header">
@@ -166,7 +166,7 @@
       </section>
       <div class="container section">
         <h2 class="disappear">Nagłówek h2 do schowania w CSS</h2>
-        <ul class="list">
+        <ul class="list list-box">
           <li>
             <div class="box">
               <svg class="box__icon" width="70" height="70">
@@ -217,7 +217,7 @@
           </li>
         </ul>
       </div>
-      <section class="container section">
+      <!-- <section class="container section">
         <h2 class="second-header">Czym się zajmujemy</h2>
         <ul class="list">
           <li class="thumb">
@@ -472,7 +472,7 @@
           </form>
         </div>
       </div>
-    </footer>
-    <script src="./JS/modal.js"></script> -->
+    </footer> -->
+    <script src="./JS/modal.js"></script>
   </body>
 </html>
