applying styles for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
           </li>
         </ul>
       </div>
-
-      <section class="container section">
+      <section class="what-we-do">
         <h2 class="second-header">Czym się zajmujemy</h2>
         <ul class="list">
           <li class="thumb">
@@ -258,137 +257,140 @@
       </section>
       <section class="section team">
         <h2 class="second-header">Nasz zespół</h2>
-        <ul class="list">
-          <li class="card">
-            <img
-              src="./images/img1.jpg"
-              alt="John Doe, Product designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="card__name">John Doe</h3>
-            <p class="card__role">Product Designer</p>
-            <div class="card__socials">
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
-                </svg>
+        <div class="team__list">
+          <ul class="list">
+            <li class="card">
+              <img
+                class="card__photo"
+                src="./images/img1.jpg"
+                alt="John Doe, Product designer"
+                srcset="./images/img1@2x.jpg 2x"
+              />
+              <h3 class="card__name">John Doe</h3>
+              <p class="card__role">Product Designer</p>
+              <div class="card__socials">
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram2"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter1"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook1"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin1"></use>
+                  </svg>
+                </div>
               </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
+            </li>
+            <li class="card">
+              <img
+                class="card__photo"
+                src="./images/img2.jpg"
+                alt="John Doe, Frontend Developer"
+                srcset="./images/img2@2x.jpg 2x"
+              />
+              <h3 class="card__name">John Doe</h3>
+              <p class="card__role">Frontend Developer</p>
+              <div class="card__socials">
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram2"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter1"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook1"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin1"></use>
+                  </svg>
+                </div>
               </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
+            </li>
+            <li class="card">
+              <img
+                class="card__photo"
+                src="./images/img3.jpg"
+                alt="John Doe, Marketing"
+                srcset="./images/img3@2x.jpg 2x"
+              />
+              <h3 class="card__name">John Doe</h3>
+              <p class="card__role">Marketing</p>
+              <div class="card__socials">
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram2"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter1"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook1"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin1"></use>
+                  </svg>
+                </div>
               </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
+            </li>
+            <li class="card">
+              <img
+                class="card__photo"
+                src="./images/img4.jpg"
+                alt="John Doe, UI Designer"
+                srcset="./images/img4@2x.jpg 2x"
+              />
+              <h3 class="card__name">John Doe</h3>
+              <p class="card__role">UI Designer</p>
+              <div class="card__socials">
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram2"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter1"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook1"></use>
+                  </svg>
+                </div>
+                <div class="card__circle">
+                  <svg class="card__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin1"></use>
+                  </svg>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./images/img2.jpg"
-              alt="John Doe, Frontend Developer"
-              width="270"
-              height="260"
-            />
-            <h3 class="card__name">John Doe</h3>
-            <p class="card__role">Frontend Developer</p>
-            <div class="card__socials">
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
-              </div>
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./images/img3.jpg"
-              alt="John Doe, Marketing"
-              width="270"
-              height="260"
-            />
-            <h3 class="card__name">John Doe</h3>
-            <p class="card__role">Marketing</p>
-            <div class="card__socials">
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
-              </div>
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./images/img4.jpg"
-              alt="John Doe, UI Designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="card__name">John Doe</h3>
-            <p class="card__role">UI Designer</p>
-            <div class="card__socials">
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram2"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
-              </div>
-              <div class="card__circle">
-                <svg class="card__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
-              </div>
-            </div>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </section>
+
       <section class="container section">
         <h2 class="second-header">Nasi klienci</h2>
         <div class="clients">
@@ -451,7 +453,7 @@
     </div>
     <footer class="footer">
       <div class="container footer__container">
-        <div>
+        <div class="footer__info">
           <a href="./index.html" class="logo2 link"
             ><span class="logo1">Web</span>Studio</a
           >
