--- a/index.html
+++ b/index.html
@@ -394,22 +394,22 @@
       <section class="container section">
         <h2 class="second-header">Nasi klienci</h2>
         <div class="clients">
-          <svg class="clients__logo" width="170" height="92">
+          <svg class="clients__logo">
             <use href="./images/icons.svg#icon-logo"></use>
           </svg>
-          <svg class="clients__logo" width="170" height="92">
+          <svg class="clients__logo">
             <use href="./images/icons.svg#icon-logo1"></use>
           </svg>
-          <svg class="clients__logo" width="170" height="92">
+          <svg class="clients__logo">
             <use href="./images/icons.svg#icon-logo2"></use>
           </svg>
-          <svg class="clients__logo" width="170" height="92">
+          <svg class="clients__logo">
             <use href="./images/icons.svg#icon-logo3"></use>
           </svg>
-          <svg class="clients__logo" width="170" height="92">
+          <svg class="clients__logo">
             <use href="./images/icons.svg#icon-logo4"></use>
           </svg>
-          <svg class="clients__logo" width="170" height="92">
+          <svg class="clients__logo">
             <use href="./images/icons.svg#icon-logo5"></use>
           </svg>
         </div>
@@ -453,55 +453,57 @@
     </div>
     <footer class="footer">
       <div class="container footer__container">
-        <div class="footer__info">
-          <a href="./index.html" class="logo2 link"
-            ><span class="logo1">Web</span>Studio</a
-          >
-          <address>
-            <p class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</p>
-            <ul class="list foot">
-              <li>
-                <a href="mailto:info@devstudio.com" class="link contact"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+48111111111" class="link contact"
-                  >+48 111 111 111</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
-        <div>
-          <h3 class="footer__heading">Dołącz do nas</h3>
-          <div class="footer__socials">
-            <div class="footer__circle">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram21"></use>
-              </svg>
-            </div>
-            <div class="footer__circle">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter11"></use>
-              </svg>
-            </div>
-            <div class="footer__circle">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook11"></use>
-              </svg>
-            </div>
-            <div class="footer__circle">
-              <svg width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin11"></use>
-              </svg>
+        <div class="footer__wrapper">
+          <div class="footer__info">
+            <a href="./index.html" class="logo2 link"
+              ><span class="logo1">Web</span>Studio</a
+            >
+            <address>
+              <p class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</p>
+              <ul class="list foot">
+                <li>
+                  <a href="mailto:info@devstudio.com" class="link contact"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a href="tel:+48111111111" class="link contact"
+                    >+48 111 111 111</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div>
+            <h3 class="footer__heading">Dołącz do nas</h3>
+            <div class="footer__socials">
+              <div class="footer__circle">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram21"></use>
+                </svg>
+              </div>
+              <div class="footer__circle">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter11"></use>
+                </svg>
+              </div>
+              <div class="footer__circle">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook11"></use>
+                </svg>
+              </div>
+              <div class="footer__circle">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin11"></use>
+                </svg>
+              </div>
             </div>
           </div>
         </div>
         <div class="newsletter">
           <h3 class="newsletter__heading">Zapisz się do newslettera</h3>
           <form>
-            <label>
+            <label class="newsletter__form">
               <input
                 class="newsletter__input"
                 type="email"
@@ -509,11 +511,13 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="newsletter__button" type="submit">
-              Zapisz się<svg class="newsletter__icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-icon-send"></use>
-              </svg>
-            </button>
+            <div class="newsletter__form">
+              <button class="newsletter__button" type="submit">
+                Zapisz się<svg class="newsletter__icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
           </form>
         </div>
       </div>
